--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,62 +1,10 @@
 beautifulsoup4==4.12.2
-bs4==0.0.1
-cachelib==0.9.0
 Flask==2.3.2
-Flask-Cors==3.0.10
-flask-marshmallow==0.15.0
-Flask-SQLAlchemy==3.0.3
-html5lib==1.1
-idna==3.4
-install==1.3.5
-ipykernel==6.22.0
-ipython==8.13.2
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-kiwisolver==1.4.4
-kombu==5.2.4
-Mako==1.2.4
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-sqlalchemy==0.29.0
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mypy-extensions==1.0.0
-nest-asyncio==1.5.6
-nltk==3.8.1
-numpy==1.24.3
-openpyxl==3.1.2
-packaging==23.1
-pandas==2.0.1
-parso==0.8.3
-pathspec==0.11.1
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.5.0
-prompt-toolkit==3.0.38
-psutil==5.9.5
-pure-eval==0.2.2
-pycodestyle==2.10.0
-pyflakes==3.0.1
-pyparsing==3.0.9
-python-dateutil==2.8.2
-regex==2023.5.5
-requests==2.30.0
+Flask_Cors==3.0.10
+flask_sqlalchemy==3.0.3
+Requests==2.31.0
 scikit-learn==1.2.2
-scipy==1.10.1
-six==1.16.0
-soupsieve==2.4.1
-SQLAlchemy==2.0.12
-stack-data==0.6.2
-textblob==0.17.1
-typing_extensions==4.5.0
-tzdata==2023.3
-urllib3==2.0.2
-vine==5.0.0
-wcwidth==0.2.6
-webencodings==0.5.1
-Werkzeug==2.3.3
+gunicorn==20.1.0
+numpy
+pandas
+pickle
