--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,7 +8,7 @@ certifi==2025.8.3
     # via requests
 charset-normalizer==3.4.3
     # via requests
-click==8.3.0
+click==8.1.8
     # via flask
 colorama==0.4.6 ; sys_platform == 'win32'
     # via click
@@ -27,6 +27,8 @@ gunicorn==20.1.0
     # via -r requirements.in
 idna==3.10
     # via requests
+importlib-metadata==8.7.0 ; python_full_version < '3.10'
+    # via flask
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.6
@@ -53,7 +55,7 @@ requests==2.31.0
     # via -r requirements.in
 scikit-learn==1.2.2
     # via -r requirements.in
-scipy==1.16.2
+scipy==1.13.1
     # via scikit-learn
 setuptools==80.9.0
     # via gunicorn
@@ -75,3 +77,5 @@ urllib3==2.5.0
     # via requests
 werkzeug==3.1.3
     # via flask
+zipp==3.23.0 ; python_full_version < '3.10'
+    # via importlib-metadata
